# kimi-adapter

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  kimi-adapter.py  pyproject.toml  start.bat  start.ps1  start.sh
.github/workflows/: ci.yml
docs/: VSCODE_SETUP.md  index.md
kimi_adapter/: __init__.py  adapter.py  cli.py  config.py
tests/: test_convert.py
